// Vitest Snapshot v1

exports[`components > N8nCard > should render correctly 1`] = `
"<div class=\\"card _card_1oonz_1\\">
  <!---->
  <div class=\\"_content_1oonz_20\\">
    <!---->
    <div class=\\"_body_1oonz_27\\">This is a card.</div>
    <!---->
  </div>
  <!---->
</div>"
`;

exports[`components > N8nCard > should render correctly with header and footer 1`] = `
"<div class=\\"card _card_1oonz_1\\">
  <!---->
  <div class=\\"_content_1oonz_20\\">
    <div class=\\"_header_1oonz_12\\">Header</div>
    <div class=\\"_body_1oonz_27\\">This is a card.</div>
    <div class=\\"_footer_1oonz_13\\">Footer</div>
  </div>
  <!---->
</div>"
`;
